removed bootstrap multiselect new select lib to interface

--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
@@ -99,7 +99,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evStateChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evStateChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evStateChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evStateChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evOperatingModeChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evOperatingModeChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evOperatingModeChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evOperatingModeChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evConnectionChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evConnectionChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evConnectionChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evConnectionChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evExecutionStatus, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evExecutionStatus, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evExecutionStatus, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evExecutionStatus, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evExecutionStatusTRob1, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evExecutionStatusTRob1, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evExecutionStatusTRob1, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evExecutionStatusTRob1, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evBackupCompleted, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evBackupCompleted, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evBackupCompleted, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evBackupCompleted, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evDataResolveChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evDataResolveChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evDataResolveChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evDataResolveChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evExecutionCycleChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evExecutionCycleChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evExecutionCycleChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evExecutionCycleChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evTaskEnabledChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evTaskEnabledChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evTaskEnabledChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evTaskEnabledChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evMasterChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evMasterChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evMasterChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evMasterChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evMotionPointerTRob1Change, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evMotionPointerTRob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evMotionPointerTRob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evMotionPointerTRob1Change, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evProgramPointerTRob1Change, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evProgramPointerTrob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evProgramPointerTrob1Change, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evProgramPointerTRob1Change, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evMotionPointerTRob1ManualChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evMotionPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evMotionPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evMotionPointerTRob1ManualChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.evProgramPointerTRob1ManualChange, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._evProgramPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._evProgramPointerTrob1ManualChange, EqUiWebUi.Areas.VASC.Models.VASCenums.SQL_Action_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.evProgramPointerTRob1ManualChange, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cVariableMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cVariableMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cVariableMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cVariableMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cVariableSearchMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cVariableSearchMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cVariableSearchMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cVariableSearchMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cDeviceInfoMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cDeviceInfoMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cDeviceInfoMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cDeviceInfoMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cCSVLogMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cCSVLogMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cCSVLogMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cCSVLogMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cJobMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cJobMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cJobMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cJobMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cErrorMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cErrorMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cErrorMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cErrorMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cPJVEventMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.ListBoxFor(model => model._cPJVEventMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control bsMultiselect", multiple = "multiple" })
+                        @Html.ListBoxFor(model => model._cPJVEventMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cPJVEventMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -323,9 +323,4 @@
     @Html.ActionLink("DELETE record", "Delete", new { id = Model.id })
 </p>
 
-@section scripts{
-<script>
-    //Enable multiselect
-    $('.bsMultiselect').selectpicker();
-</script>
-}
+
