--- a/EqUiWebUi/Areas/VASC/Views/c_controller/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Add a new controller", "Edit", new { id = -1 })
+    @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_controller", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a controller", OpenNewWindow: true)
 </p>
 
 @Html.AjaxGrid(Url.Action("_List"))
