--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Edit.cshtml
@@ -285,7 +285,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.logCategoryMask, htmlAttributes: new { @class = "control-label col-md-6" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.logCategoryMask, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ListBoxFor(model => model._logCategoryMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.logCategoryMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -303,6 +303,14 @@
                     <div class="col-md-8">
                         @Html.ListBoxFor(model => model._cPJVEventMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
                         @Html.ValidationMessageFor(model => model.cPJVEventMask, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.cPJVActionMask, htmlAttributes: new { @class = "control-label col-md-6" })
+                    <div class="col-md-8">
+                        @Html.ListBoxFor(model => model._cPJVActionMask, EqUiWebUi.Areas.VASC.Models.VASCenums.Enable_bit_MASK_SelectList, new { @class = "form-control", multiple = "multiple" })
+                        @Html.ValidationMessageFor(model => model.cPJVActionMask, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
