--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
@@ -10,8 +10,8 @@
 @Html.Grid(Model).Named("c_service_setupSessionsGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_mask");
-    columns.Add(c => c.bit_id).Titled("bit_id").Css("d-none");
+    columns.Add(c => EqUiWebUi.Areas.VASC.Models.VASCenums.intArrayTostring(c._Enable_mask)).Titled("_Enable_mask").Filterable(true);
+    //columns.Add(c => c.bit_id).Titled("bit_id");
     columns.Add(c => c.SessionName).Titled("SessionName");
     //columns.Add(c => c.description).Titled("description");
     columns.Add(c => c.ServiceName).Titled("ServiceName");
@@ -22,7 +22,7 @@
        .Filterable(true)
        .RenderedAs(c => VASChelpers.SetServiceState(c.ServiceName, c.ServiceStatus));
     //columns.Add(c => c.ServiceStartName).Titled("StartName");
-columns.Add(c => c.ServiceDescription).Titled("ServiceDescription");
+    columns.Add(c => c.ServiceDescription).Titled("ServiceDescription");
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
 
 <hr />
@@ -36,7 +36,7 @@ columns.Add(c => c.ServiceDescription).Titled("ServiceDescription");
 <div class="card">
     <div class="alert alert-danger col-6">
         <strong>WARNING!</strong>
-        if the option has a sessiondatabit set to -1 this means its for
+        if the option has a session databit set to -1 this means its for
         <strong>ALL SESSIONS</strong>
     </div>
     <div class="card-body">
