--- a/EqUiWebUi/Areas/VASC/Views/c_variable/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/Index.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <p>
-    @Html.ActionLink("ADD new variable to log", "Edit", new { id = -1 })
+    @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_variable", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a variable to log", OpenNewWindow: true)
 </p>
 
 
