--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Edit.cshtml
@@ -35,7 +35,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.User_id, "User_id", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("User_id", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("User_id", null, htmlAttributes: new { @class = "form-control selectpicker", @data_live_search = "true" })
             @Html.ValidationMessageFor(model => model.User_id, "", new { @class = "text-danger" })
         </div>
     </div>
