--- a/EqUiWebUi/Areas/user_management/Views/usersPermisions/Create.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/usersPermisions/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.user_id, "user_id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("user_id", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("user_id", null, htmlAttributes: new { @class = "form-control selectpicker", @data_live_search = "true" })
                 @Html.ValidationMessageFor(model => model.user_id, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Role, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Role", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Role", null, htmlAttributes: new { @class = "form-control selectpicker", @data_live_search = "true" })
                 @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
             </div>
         </div>
